se agregaron mas btn a las tarjetas y pequeñas modificacione en sass

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- INICIO MAIN -->
     <main>
         <!-- FOTOS CARRUSEL -->
-        <div id="carrusell" class="carousel slide" data-bs-ride="carousel">
+        <div id="carrusell" class="carousel slide BordeCarrusel" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
                     <img src="./assets/carruselfoto1.jpg" class="d-block w-100 imagenCarrusel" loading="lazy" alt="foto maquinas cortadoras de pelo">
@@ -79,7 +79,6 @@
         </div>
         <!--CIERRE FOTOS CARRUSEL -->
         <h2 class="h2categoriasinicio">CATEGORIAS</h2>
-        <br>
 
 
         <section class="categoriasinicio">
@@ -124,7 +123,7 @@
             </div>
             <div class="footer-contenido">
                 <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
-                    <h3 class="text-center fs-2 footer-texto shadow-lg">CATEGORIAS</h3>
+                    <h3 class="text-center fs-2 footer-texto">CATEGORIAS</h3>
 
                     <div class="p-3 d-flex flex-column">
                         <ul class="categorias-footer">
@@ -139,8 +138,8 @@
 
 
                 <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
-                    <h3 class="text-center fs-2 footer-texto shadow-lg" >REDES</h3>
-                    <div class="p-5 d-flex justify-content-around">
+                    <h3 class="text-center fs-2 footer-texto">REDES</h3>
+                    <div class="p-5 d-flex justify-content-around ">
 
                         <a href="https://www.instagram.com/" target="_blank">
                             <img src="./assets/instagram-logo-24.png" loading="lazy" alt="logo de instagram">
@@ -153,7 +152,7 @@
                 </div>
 
                 <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
-                    <h3 class="text-center fs-2 footer-texto shadow-lg" >METODOS DE PAGO</h3>
+                    <h3 class="text-center fs-2 footer-texto " >METODOS DE PAGO</h3>
                     <div class="p-5 d-flex justify-content-center">
                         <img src="./assets/logopago.jpg" loading="lazy" alt="foto de tarjetas" class="w-auto">
                     </div>
