--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="footer-contenido">
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
-                        <h3 class="text-center fs-2 footer-texto shadow-lg">CATEGORIAS</h3>
+                        <h3 class="text-center fs-2 footer-texto ">CATEGORIAS</h3>
 
                         <div class="p-3 d-flex flex-column">
                             <ul class="categorias-footer">
@@ -109,7 +109,7 @@
 
 
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
-                        <h3 class="text-center fs-2 footer-texto shadow-lg">REDES</h3>
+                        <h3 class="text-center fs-2 footer-texto ">REDES</h3>
                         <div class="p-5 d-flex justify-content-around">
 
                             <a href="https://www.instagram.com/" target="_blank">
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
-                        <h3 class="text-center fs-2 footer-texto shadow-lg">METODOS DE PAGO</h3>
+                        <h3 class="text-center fs-2 footer-texto ">METODOS DE PAGO</h3>
                         <div class="p-5 d-flex justify-content-center">
                             <img src="../assets/logopago.jpg" alt="foto de tarjetas" loading="lazy" class="w-auto">
                         </div>
