--- a/pages/maquinas.html
+++ b/pages/maquinas.html
@@ -76,14 +76,8 @@
                             alt="Maquina Cortadora De Pelo Super Taper Profesional">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Maquina Cortadora De Pelo Super Taper Profesional </h3>
+                            <h3 class="fs-6">MAQUINA CORTADORA DE PELO SUPER TAPER </h3>
                             <p class="fw-bolder">$22990</p>
-                            <!-- <h4>Motor vibratorio profesional V5000 para durabilidad Ideal para grandes exigencias
-                                Trabaja con
-                                cable, ideal para uso continuo Gran potencia, alta precisión con cuchillas
-                                profesionales,
-                                Peso:
-                                450 g, incluye: clipper, protector de cuchilla, 4 guias peine plásticos </h4> -->
                             <button tabindex="0" 
                                 class="btnDeTarjetas" 
                                 role="button" 
@@ -110,7 +104,7 @@
                             alt="Cortadora de pelo profesional 1400 Wahl">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Cortadora de pelo profesional 1400 Wahl </h3>
+                            <h3 class="fs-6">CORTADORA DE PELO PROFESIONAL 1400 WAHL </h3>
                             <p class="fw-bolder">$8990</p>
                                 <button tabindex="0" 
                                 class="btnDeTarjetas"
@@ -134,7 +128,7 @@
                             alt="Maquina Cortar Pelo Inalambrica Duga">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Maquina Duga Barber Profesional D405</h3>
+                            <h3 class="fs-6">MAQUINA DUGA BARBER PROFESIONAL D405</h3>
                             <p class="fw-bolder">$9490</p>
                                 <button tabindex="0" 
                                 class="btnDeTarjetas"
@@ -213,7 +207,7 @@
                             alt="Máquina Patillera Profesional Pivot Trimmer ">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Máquina Patillera Profesional Pivot Trimmer </h3>
+                            <h3 class="fs-6">PATILLERA PROFESIONAL PIVOT TRIMMER</h3>
                             <p class="fw-bolder">$17999</p>
                                 <button tabindex="0" 
                                 class="btnDeTarjetas"
@@ -239,7 +233,7 @@
                             alt="Afeitadora y Rapadora Fading & Shaving ">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Afeitadora y Rapadora Fading & Shaving </h3>
+                            <h3 class="fs-6">AFEITADORA Y RAPADORA FADING y SHAVING</h3>
                             <p class="fw-bolder">$9990</p>
                             <button tabindex="0" 
                             class="btnDeTarjetas" 
@@ -290,7 +284,7 @@
                             alt="Babyliss Pro AFEITADORA FOIL FX03 BABYLISS">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Babyliss Pro AFEITADORA FOIL FX03 BABYLISS</h3>
+                            <h3 class="fs-6">BABYLISS PRO AFEITADORA FOIL FX03</h3>
                             <p class="fw-bolder">$44990</p>
                                 <button tabindex="0" 
                                 class="btnDeTarjetas"
@@ -327,7 +321,7 @@
                 </div>
                 <div class="footer-contenido">
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
-                        <h3 class="text-center fs-2 footer-texto shadow-lg">CATEGORIAS</h3>
+                        <h3 class="text-center fs-2 footer-texto ">CATEGORIAS</h3>
 
                         <div class="p-3 d-flex flex-column">
                             <ul class="categorias-footer">
@@ -342,7 +336,7 @@
 
 
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
-                        <h3 class="text-center fs-2 footer-texto shadow-lg">REDES</h3>
+                        <h3 class="text-center fs-2 footer-texto ">REDES</h3>
                         <div class="p-5 d-flex justify-content-around">
 
                             <a href="https://www.instagram.com/" target="_blank">
@@ -356,7 +350,7 @@
                     </div>
 
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
-                        <h3 class="text-center fs-2 footer-texto shadow-lg">METODOS DE PAGO</h3>
+                        <h3 class="text-center fs-2 footer-texto ">METODOS DE PAGO</h3>
                         <div class="p-5 d-flex justify-content-center">
                             <img src="../assets/logopago.jpg" loading="lazy" alt="foto de tarjetas" class="w-auto">
                         </div>
