se agrego logo.ico

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="¿Quieres convertirte en todo un experto profesional de la barberia?, Esta es tu tienda ideal  y  al mejor Precio!">
+    <link rel="shortcut icon" href="./assets/logo2.0.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Barber Shop BM | Tienda Online</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
