--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -10,6 +10,7 @@
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> 
     <meta name="description" content="Los mejores accesorios para peluqueros y barberos del pais en nuestra tienda online">
+    <link rel="shortcut icon" href="/assets/logo2.0.ico" type="image/x-icon">
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Accesorios | Barber Shop BM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
