--- a/pages/tijerasynavajas.html
+++ b/pages/tijerasynavajas.html
@@ -10,6 +10,7 @@
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="Las mejores tijeras y navajas para barberia al mejor precio">
+    <link rel="shortcut icon" href="/assets/logo2.0.ico" type="image/x-icon">
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Tijeras & Navajas | Barber Shop BM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
